Updated bg-img so it appears correctly on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,20 +8,20 @@ html {
 }
 
 p {
-  @apply px-4 md:p-0 text-[15px] md:text-[18px] text-left mt-4 sm:mt-6 lg:mt-10 tracking-wide max-w-[900px] lg:min-w-[900px];
+  @apply px-5 md:p-0 text-[15px] md:text-[18px] text-left mt-4 sm:mt-6 lg:mt-10 tracking-wide max-w-[900px] lg:min-w-[900px];
 }
 
 h2 {
-  @apply text-xl md:text-3xl font-semibold lg:font-bold tracking-wider;
+  @apply text-3xl md:text-4xl font-semibold lg:font-bold tracking-tight px-2;
 }
 
 h3 {
-  @apply text-[16px] md:text-[20px] font-semibold text-center text-orange-400 mt-4 tracking-wider;
+  @apply text-[20px] font-semibold text-center text-orange-400 mt-4 tracking-tight px-2;
 }
 
 #hero {
   background-image: url("../public/assets/bg_boat.jpg");
-  background-position: 60%;
+  background-position: 56% 48%;
 }
 
 #design {
